--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-event-timeline": "^1.6.3",
+    "react-horizontal-timeline": "^1.5.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
